--- a/www/templates/tab-locations.html
+++ b/www/templates/tab-locations.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Location">
+<ion-view view-title="Locations">
   <ion-content class="padding">
     <div ng-repeat="location in locations">
-      <ion-item href="#/tab/dash/{{location.$id}}">
+      <ion-item href="#/tab/locations/{{location.$id}}">
         <div class="item-icon-left">
           &nbsp; {{location.name}}
           <i ng-if="location.live" class="icon ion-ios-videocam-outline"></i>
@@ -9,7 +9,6 @@
         <div class="item-icon-right">
           <i class="icon ion-ios-arrow-right"></i>
         </div>
-
       </ion-item>
     </div>
   </ion-content>
