--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,17 +1,11 @@
-
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <ion-tab title="Map" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/map">
     <ion-nav-view name="tab-map"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Location" icon-off="ion-ios-location-outline" icon-on="ion-ios-location" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Locations" icon-off="ion-ios-location-outline" icon-on="ion-ios-location" href="#/tab/locations">
+    <ion-nav-view name="tab-locations"></ion-nav-view>
   </ion-tab>
-
-  <ion-tab title="Admin" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/admin">
-    <ion-nav-view name="tab-admin"></ion-nav-view>
-  </ion-tab>
-
 
 </ion-tabs>
