--- a/www/templates/location-detail.html
+++ b/www/templates/location-detail.html
@@ -1,35 +1,39 @@
-<ion-view view-title="{{location.name}}">
+<ion-view view-title="Location details">
+
   <ion-content class="padding">
-    <div class="row">
-      <div class="col col-top" style="cursor: pointer;">
-        <img ng-hide="url" ng-click="init(location.stream)" ng-src="{{location.thumb}}"/>
-        <iframe  style="width:1024px; height:768px;" ng-src="{{url}}" allowfullscreen></iframe>
-      </div>
-      <div class="col col-top">
-         <h3><i class="icon ion-thermometer"></i> Temperature : {{location.temperature}}°C</h3>
-        <h3><i class="icon ion-ios-sunny-outline"></i> UV index: {{location.uv}}</h3>
-        <h3><i class="icon ion-leaf"></i> Air polution: {{location.mq}}%</h3>
-        <h3><i class="icon ion-ios-rainy-outline"></i> Humidity : {{location.humidity}}%</h3>
-        <h3><i class="icon ion-ios-people-outline"></i> People : {{location.ppl}}</h3>
-      </div>
-      <div class="col col-top">
-        <ul>
-          <li ng-repeat="message in chat">
-            <b>{{message.username}}</b> | {{message.text}}
-          </li>
-        </ul>
-        <div class="list padding-top">
-          <label class="item item-input">
-            <span class="input-label">Username</span>
-            <input type='text' ng-model='msg.username' placeholder='Enter a username...'>
-          </label>
-          <label class="item item-input">
-            <span class="input-label">Message</span>
-            <input type='text' ng-model='msg.text'  placeholder='Type a message...'>
-          </label>
+
+    <div class = "row responsive-sm">
+
+      <div class = "col col-50 col-offset-25">
+
+        <div class="list card">
+
+          <div class="item item-header">
+
+            <h2>{{location.name}}</h2>
+
+          </div>
+
+          <div class="item item-body">
+
+            <p class="padding"><i class="icon ion-thermometer"></i> Temperature : {{location.temperature}}°C</p>
+
+            <p class="padding"><i class="icon ion-ios-rainy-outline"></i> Humidity : {{location.humidity}}%</p>
+
+            <p class="padding"><i class="icon ion-ios-sunny-outline"></i> UV index: {{location.uv}}</p>
+
+            <p class="padding"><i class="icon ion-leaf"></i> Air quality: {{100-location.mq}}%</p>
+
+            <p class="padding"><i class="icon ion-ios-people-outline"></i> People : {{location.ppl}}</p>
+
+          </div>
+
         </div>
-          <button  ng-click="update(msg)" class="button button-block button-positive">Send</button>
-     </div>
+
+      </div>
+
     </div>
+
   </ion-content>
+
 </ion-view>
