--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,34 +1,55 @@
 <ion-view view-title="Map">
+
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon" ng-click="toggleMenu();"></button>
   </ion-nav-buttons>
+
   <ion-side-menus>
+
     <ion-side-menu side="left">
+
       <ion-content padding="false">
+
         <ion-list>
-          <ion-item ng-class="{'active' : type == 1}" class="item-icon-left" ng-click="trigger(1)">
+
+          <ion-item ng-class="{'active' : type == 1}" class="item-icon-left" ng-click="changeTypeGradient(1)">
             <i class="icon ion-thermometer"></i> Temperature
           </ion-item>
-          <ion-item ng-class="{'active' : type == 2}" class="item-icon-left" ng-click="trigger(2)">
+
+          <ion-item ng-class="{'active' : type == 2}" class="item-icon-left" ng-click="changeTypeGradient(2)">
             <i class="icon ion-ios-sunny-outline"></i> UV index
           </ion-item>
-          <ion-item ng-class="{'active' : type == 4}" class="item-icon-left" ng-click="trigger(4)">
+
+          <ion-item ng-class="{'active' : type == 4}" class="item-icon-left" ng-click="changeTypeGradient(4)">
             <i class="icon ion-ios-rainy-outline"></i> Humidity
           </ion-item>
-          <ion-item ng-class="{'active' : type == 5}" class="item-icon-left" ng-click="trigger(5)">
+
+          <ion-item ng-class="{'active' : type == 5}" class="item-icon-left" ng-click="changeTypeGradient(5)">
             <i class="icon ion-leaf"></i> Air polution
           </ion-item>
-          <ion-item ng-class="{'active' : type == 6}" class="item-icon-left" ng-click="trigger(6)">
+
+          <ion-item ng-class="{'active' : type == 6}" class="item-icon-left" ng-click="changeTypeGradient(6)">
             <i class="icon ion-ios-people-outline"></i> People
           </ion-item>
+
         </ion-list>
+
       </ion-content>
+
     </ion-side-menu>
+
     <ion-side-menu-content>
+
       <ion-content>
-        <div id="map" data-tap-disabled="true"></div>
+
+        <div id="map">
+          <!-- content -->
+        </div>
+
       </ion-content>
+
     </ion-side-menu-content>
 
   </ion-side-menus>
+
 </ion-view>
