--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,11 +1,20 @@
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+
+<ion-tabs class="tabs-icon-top tabs-background-light">
 
   <ion-tab title="Map" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/map">
-    <ion-nav-view name="tab-map"></ion-nav-view>
+
+    <ion-nav-view name="tab-map">
+      <!-- content -->
+    </ion-nav-view>
+
   </ion-tab>
 
-  <ion-tab title="Locations" icon-off="ion-ios-location-outline" icon-on="ion-ios-location" href="#/tab/locations">
-    <ion-nav-view name="tab-locations"></ion-nav-view>
+  <ion-tab title="Locations" icon-off="ion-ios-location" icon-on="ion-ios-location" href="#/tab/locations">
+
+    <ion-nav-view name="tab-locations">
+      <!-- content -->
+    </ion-nav-view>
+
   </ion-tab>
 
 </ion-tabs>
